--- a/app/src/main/res/layout/item_thumb_nail.xml
+++ b/app/src/main/res/layout/item_thumb_nail.xml
@@ -2,9 +2,9 @@
 <ImageView
     android:id="@+id/item_pic_thumb_nail_iv_thumb_nail"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="@dimen/dp_100"
-    android:layout_height="@dimen/dp_80"
+    android:layout_width="@dimen/dp_180"
+    android:layout_height="wrap_content"
     android:layout_margin="@dimen/dp_5"
-    android:scaleType="fitXY"
+    android:scaleType="centerInside"
     android:src="@drawable/chicken_legs">
 </ImageView>
