--- a/app/src/main/res/menu/menu_final_cloud_vision_test.xml
+++ b/app/src/main/res/menu/menu_final_cloud_vision_test.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <group
+    <groupFilter
         android:id="@+id/menu_group"
         android:checkableBehavior="single">
-        <item
+        <items
         android:id="@+id/menu_foods"
         app:showAsAction="never"
         android:title="Food Images"/>
-        <item
+        <items
             android:id="@+id/menu_sea_foods"
             app:showAsAction="never"
             android:title="SeaFood Images"/>
-        <item
+        <items
             android:id="@+id/menu_cars"
             app:showAsAction="never"
             android:title="Car Images"/>
-    </group>
+    </groupFilter>
 
 </menu>
