--- a/app/src/main/res/menu/menu_image_recognitive_demo.xml
+++ b/app/src/main/res/menu/menu_image_recognitive_demo.xml
@@ -2,11 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item android:id="@+id/category_foods"
+    <items android:id="@+id/category_foods"
           android:title="Show Food Category"
           app:showAsAction="never"/>
 
-    <item android:id="@+id/category_cars"
+    <items android:id="@+id/category_cars"
           android:title="Show Car Category"
           app:showAsAction="never"/>
 </menu>
