--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,4 +13,12 @@
     <dimen name="dp_150">150dp</dimen>
     <dimen name="dp_100">100dp</dimen>
     <dimen name="dp_80">80dp</dimen>
+    <dimen name="dp_180">180dp</dimen>
+    <dimen name="sp_8">8sp</dimen>
+    <dimen name="dp_81">81dp</dimen>
+    <dimen name="dp_1">1dp</dimen>
+    <dimen name="dp_70">70dp</dimen>
+    <dimen name="dp_60">60dp</dimen>
+    <dimen name="sp_18">18sp</dimen>
+    <dimen name="sp_50">50sp</dimen>
 </resources>
