--- a/app/src/main/res/layout/item_diet_log.xml
+++ b/app/src/main/res/layout/item_diet_log.xml
@@ -17,9 +17,9 @@
             android:gravity="center_vertical">
 
             <TextView
-                android:id="@+id/item_food_data_base_tv_name"
+                android:id="@+id/item_diet_log_tv_name"
                 android:layout_width="0dp"
-                android:layout_weight="0.4"
+                android:layout_weight="0.6"
                 android:layout_height="match_parent"
                 android:padding="@dimen/dp_10"
                 android:gravity="center"
@@ -35,38 +35,49 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Description"
+                    android:text="Date"
                     android:gravity="center"
                     android:textColor="@android:color/white"
                     android:background="@android:color/darker_gray"
                     android:layout_marginLeft="@dimen/dp_1"
                     android:layout_marginRight="@dimen/dp_1"/>
-                <FrameLayout
+                <TextView
+                    android:id="@+id/item_diet_log_tv_date"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
-                    android:layout_weight="1">
-                    <TextView
-                        android:id="@+id/item_food_data_base_tv_description"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:text="Description"
-                        android:gravity="center"
-                        android:padding="@dimen/dp_10"
-                        android:textSize="@dimen/sp_10" />
-                    <TextView
-                        android:id="@+id/item_food_data_base_tv_date"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="2018/06/20 12:30:26"
-                        android:textColor="@android:color/holo_red_dark"
-                        android:layout_gravity="bottom|end"
-                        android:textSize="@dimen/sp_8"
-                        android:padding="@dimen/dp_5"/>
-                </FrameLayout>
+                    android:layout_weight="1"
+                    android:text="2018/06/28"
+                    android:gravity="center"
+                    android:padding="@dimen/dp_10"
+                    android:textSize="@dimen/sp_10" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Consumption"
+                    android:gravity="center"
+                    android:textColor="@android:color/white"
+                    android:background="@android:color/darker_gray"
+                    android:layout_marginRight="@dimen/dp_1"/>
+                <TextView
+                    android:id="@+id/item_diet_log_tv_consumption"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:text="100g"
+                    android:gravity="center"
+                    android:padding="@dimen/dp_10"
+                    android:textSize="@dimen/sp_10" />
             </LinearLayout>
 
             <ImageView
-                android:id="@+id/item_food_data_base_iv_thumb_nail"
+                android:id="@+id/item_diet_log_iv_thumb_nail"
                 android:layout_width="@dimen/dp_81"
                 android:layout_height="@dimen/dp_81"
                 android:scaleType="centerCrop"
